[storage] [skip ci] add check user permission on storage access attempt
