# api-gateway/internal/models/transaction.go
@@ -6,7 +6,7 @@ import (
 
 type Transaction struct {
 	Id uuid.UUID            `json:"id" db:"id" swaggerignore:"true"`
-	UserId uuid.UUID        `json:"user_id" db:"user_id"`
+	UserId uuid.UUID        `json:"user_id" db:"user_id" swaggerignore:"true"`
 
 	Type string             `json:"type" db:"type"`
 	Target string           `json:"target" db:"target"`
@@ -15,6 +15,4 @@ type Transaction struct {
 	Cost float64            `json:"cost" db:"cost"`
 
 	Timestamp string     	`json:"timestamp" db:"timestamp" swaggerignore:"true"`
-
-	WithAutoCategory bool	`json:"with_auto_category"`
 }
